// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should support js output format for additionalProperties errors 1`] = `
Array [
  Object {
    "end": Object {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "error": " Property baz is not expected to be here",
    "path": "",
    "start": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
  },
]
`;

exports[`Main should support js output format for default errors 1`] = `
Array [
  Object {
    "end": Object {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "error": "/id: type should be number",
    "path": "/id",
    "start": Object {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
  },
]
`;

exports[`Main should support js output format for enum errors 1`] = `
Array [
  Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "error": "/id should be equal to one of the allowed values: foo, bar",
    "path": "/id",
    "start": Object {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "suggestion": "Did you mean bar?",
  },
]
`;

exports[`Main should support js output format for required errors 1`] = `
Array [
  Object {
    "error": "/nested should have required property 'id'",
    "path": "/nested",
    "start": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
  },
]
`;
